app/app.css
/*******Weather **************/
/* TODO - I can only seem to link this correctly with an absolute path - either find a better way, or change the path as needed */

@import 'https://bootcamp-coders.cnm.edu/~rdicharry/farmers-almanac/app/css/weather-icons.css';
/*@import 'https://<?php echo dirname($__DIR__) . "/"; ?>css/weather-icons.css';*/
/*@import url('../app/css/weather-icons.css');*/

body{

	/*background-color: #525252;*/
}

.jumbotron {
	align-self: flex-end;
	background: transparent;
	color: #fff;
}

/******** signup page ********/

.centered-form{
	margin-top: 60px;
}

.centered-form .panel{
	background: rgba(255, 255, 255, 0.8);
	box-shadow: rgba(0, 0, 0, 0.3) 20px 20px 20px;
}

/********Nav Bar********/

.navbar-brand {
	font-family: 'Merienda One', cursive;
	color: white;
}

.navbar-default .navbar-brand {
	color: #f5f5f5;
}

.navbar-default .navbar-brand:hover {
	color: lightgreen;
}

.navbar-default .navbar-brand:active {
	color: lightgreen;
}


.navbar-default {
	background-color: rgb(66, 0, 50);
}

.navbar-default .navbar-nav>li>a, .navbar-default .navbar-text {
	color: #f5f5f5;
}

.navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-text {
	color: lightgreen;
}

.navbar-default .navbar-nav>li>a:focus {
	color: lightgreen;
}

.navbar-default .navbar-nav>li>a:active, .navbar-default .navbar-text {
	color: lightgreen;
}



/******** HOME ***********/
.home {
	background: url("../app/img/vegetable-basket.jpg") no-repeat center fixed;
	background-size: cover;
	padding-top: 110px;
	padding-bottom: 250px;
	height: 100%;
}

.home h1 {
	font-family: 'Merienda One', cursive;
	color: white;
	font-size: 80px;
	text-shadow: 2px 1px 0 #000;
	padding-bottom: 20px;
}

.home p {
	font-family: 'Merienda One', cursive;
	color: white;
	font-size: 20px;
	text-shadow: 2px 1px 0 #000;
}

/* use the min-width of the appropriate breakpoint (this is set on md and lg)*/
@media only screen and (max-width: 992px) {
	.home h1 {
		font-size: 60px;
	}
	.harvest-progress {
		display: none;
	}
}

/****** LOGIN MODAL ******/
.loginmodal-container {
	padding: 30px;
	max-width: 350px;
	width: 100% !important;
	background-color: #F7F7F7;
	margin: 0 auto;
	border-radius: 0px;
	box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
	overflow: hidden;
}

.loginmodal-container h1 {
	text-align: center;
	font-size: 1.8em;
}

.loginmodal-container input[type=submit] {
	width: 100%;
	display: block;
	margin-bottom: 10px;
	position: relative;
}

.loginmodal-container input[type=text], input[type=password] {
	height: 44px;
	font-size: 16px;
	width: 100%;
	margin-bottom: 10px;
	-webkit-appearance: none;
	background: #fff;
	border: 1px solid #d9d9d9;
	border-top: 1px solid #c0c0c0;
	padding: 0 8px;
	box-sizing: border-box;
	-moz-box-sizing: border-box;
}

.loginmodal-container input[type=text]:hover, input[type=password]:hover {
	border: 1px solid #b9b9b9;
	border-top: 1px solid #a0a0a0;
	-moz-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
	-webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
	box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
}

.loginmodal {
	text-align: center;
	font-size: 14px;
	font-weight: 700;
	height: 36px;
	padding: 0 8px;
	/* border-radius: 3px; */
	/* -webkit-user-select: none;
	  user-select: none; */
}

.loginmodal-submit {
	/* border: 1px solid #3079ed; */
	border: 0px;
	color: #fff;
	text-shadow: 0 1px rgba(0,0,0,0.1);
	background-color: #4d90fe;
	padding: 17px 0px;
	font-size: 14px;
	/* background-image: -webkit-gradient(linear, 0 0, 0 100%,   from(#4d90fe), to(#4787ed)); */
}

.loginmodal-submit:hover {
	/* border: 1px solid #2f5bb7; */
	border: 0px;
	text-shadow: 0 1px rgba(0,0,0,0.3);
	background-color: #357ae8;
	/* background-image: -webkit-gradient(linear, 0 0, 0 100%,   from(#4d90fe), to(#357ae8)); */
}

.loginmodal-container a {
	text-decoration: none;
	color: #666;
	font-weight: 400;
	text-align: center;
	display: inline-block;
	opacity: 0.4;
	transition: opacity ease 0.5s;

}

.login-help{
	font-size: 12px;
}

/****** signout MODAL ******/
.signoutmodal-container {
	padding: 30px;
	max-width: 350px;
	width: 100% !important;
	background-color: #F7F7F7;
	margin: 0 auto;
	border-radius: 0px;
	box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
	overflow: hidden;
}

.signoutmodal-container h1 {
	text-align: center;
	font-size: 1.8em;
}

.signoutmodal {
	text-align: center;
	font-size: 14px;
	font-weight: 700;
	height: 36px;
	padding: 0 8px;
	/* border-radius: 3px; */
	/* -webkit-user-select: none;
	  user-select: none; */
}

.signoutmodal-container a {
	text-decoration: none;
	color: #666;
	font-weight: 400;
	text-align: center;
	display: inline-block;
	opacity: 0.4;
	transition: opacity ease 0.5s;
}

/****** Weather ***********/
.weather-display{
	color: black;
	background-color: white;
	padding: 20px;
}

.weather-display .low{
	color: #666;
}

.weather-diplay .high{
	color: black;
}

.current-weather {
	border-color:  #666;

}

.week-forecast .row {
	border-color:  #666;
	padding: 8px;
}

.week-forecast > table > tr > td {
	vertical-align: middle;
}

.week-forecast-icon > i {
	font-size: xx-large;
}

/******* Add Plants View ******/
#plant-table {
	border: 2px black;
	border-radius: 10px;
}

/*input[type=search] {
	-webkit-appearance: textfield;
}*/

/*input-group-addon*/

#combative-plants {
	background: lightpink;
}

#companion-plants {
	background: lightgreen;
}

.selected-plant {
	background: lightgreen;
}

.plant-search-icon {
	test-align:right;
}

/******** garden ********/

.add-plant {
	padding-bottom: 10px;

}

.success-leaf {
	color: green;

}

.harvest-progress{
	width: 12rem;
}

.gray-dot{
	color: gray;
	padding: 0;
	margin: 0;
}

.gray-dot::before{
	padding:0;
	margin:0
}

.fa-circle::before{
	padding: 0;
	margin: 0;
}
i.fa-circle::before{
	padding:0;
	margin:0;
}

